--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,15 +1,15 @@
 ---
-layout: default
 title:
-description:
-keywords:
+description: >-
+keywords: >-
 image:
-permalink: "/"
+banner:
+  image:
+  video:
+  preheading:
+  title:
+  subtext:
+layout: default
+permalink: /
 ---
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
 
-		</div>
-	</div>
-</div>
